RDM-11005: Refactor query so we do not fetch whole CaseDetails object